# taxi-demand-prediction

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.dvc/: config
.github/workflows/: ci_cd.yaml
data/interim/: .gitignore  final_time_series_data.csv.dvc  pickup_coord_data.csv.dvc  processing_data.csv.dvc  time_series.csv.dvc
data/processed/: .gitignore  test.csv.dvc  train.csv.dvc
data/raw/: .gitignore  yellow_tripdata_2016-01.csv.dvc  yellow_tripdata_2016-02.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_EDA.ipynb  02_removing_outliers.ipynb  03_breaking_NYC_into_regions.ipynb  04_generating_historical_data.ipynb  05_training_baseline_model.ipynb  06_model_selection_hyp_tuning.ipynb  07_plot_map.ipynb
taxi_demand_prediction/: __init__.py  config.py  data_ingestion.py  dataset.py  extract_features.py  feature_engineering.py  features.py  model_evaluation.py  model_promotion.py  model_registration.py  model_training.py  plots.py
taxi_demand_prediction/modeling/: predict.py  train.py
taxi_demand_prediction/utils/: common.py
tests/: test_model_performance.py  test_model_registry.py
