[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "taxi_demand_prediction"
version = "0.0.1"
description = "A machine learning project that predicts taxi demand in New York City in a particular region at a particular time."
authors = [
  { name = "Sushrut Gaikwad" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["taxi_demand_prediction"]
force_sort_within_sections = true
